src/objects/CFM_Survey_Project_Review__c.object
<CustomObject>
    <description>CFM: This object represents a group of projects in a survey that are out to a PM for review</description>
    <fields>
        <fullName>Email_Sent_Date__c</fullName>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Project_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Batch__c</fullName>
        <label>Survey Batch</label>
        <referenceTo>CFM_Survey_Batch__c</referenceTo>
        <relationshipLabel>Survey Project Reviews</relationshipLabel>
        <relationshipName>Survey_Project_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Close_Date__c</fullName>
        <formula>Survey_Batch__r.Survey_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Target_Date__c</fullName>
        <formula>Survey_Batch__r.Target_Survey_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Target Date</label>
        <type>Date</type>
    </fields>
    <label>Survey Project Review</label>
    <nameField>
        <displayFormat>SPR-{00000}</displayFormat>
        <label>Survey Project Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Project Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>